unpackaged/main/default/objects/Campaign/fields/External_BID__c.field-meta.xml
<CustomField>
    <fullName>External_BID__c</fullName>
    <description>Adobe generated &quot;bid&quot; parameter. Used for campaign matching automation in the Lead forms.</description>
    <label>Broadlog ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>