unpackaged/main/default/objects/Campaign/fields/External_CampDesc__c.field-meta.xml
<CustomField>
    <fullName>External_CampDesc__c</fullName>
    <description>The Adobe generated campaign description (used for campaign matching automation in the lead forms).</description>
    <inlineHelpText>Campaign template name</inlineHelpText>
    <label>Campaign Description</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>