unpackaged/main/default/objects/Campaign/fields/External_Cid__c.field-meta.xml
<CustomField>
    <fullName>External_Cid__c</fullName>
    <label>External Cid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>