unpackaged/main/default/objects/Campaign/fields/External_delvid__c.field-meta.xml
<CustomField>
    <fullName>External_delvid__c</fullName>
    <description>A unique ID generated by Adobe at time of delivery. Used in campaign tracking from the Lead forms.</description>
    <inlineHelpText>A unique ID generated by Adobe at time of delivery</inlineHelpText>
    <label>Delivery ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>