unpackaged/main/default/objects/Campaign/fields/External_DID__c.field-meta.xml
<CustomField>
    <fullName>External_DID__c</fullName>
    <description>Adobe generated &quot;did&quot; code. Used for campaign matching automation on the Lead forms.</description>
    <externalId>true</externalId>
    <inlineHelpText>This is a mandatory parameter. This parameter is what establishes the linkage in to the Adobe Campaign. Program Managers will need to provide this value.</inlineHelpText>
    <label>Delivery Internal Name</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>