unpackaged/main/default/objects/Campaign/fields/External_nat__c.field-meta.xml
<CustomField>
    <fullName>External_nat__c</fullName>
    <description>Adobe &quot;Nature of Delivery&quot; tracking for Lead forms.</description>
    <label>Nature/Objective of Delivery</label>
    <length>50</length>
    <type>Text</type>
</CustomField>