unpackaged/main/default/objects/Campaign/fields/External_send__c.field-meta.xml
<CustomField>
    <fullName>External_send__c</fullName>
    <description>External sender alias from Adobe campaign. Used for campaign tracking in Lead forms.</description>
    <label>From Alias</label>
    <length>100</length>
    <type>Text</type>
</CustomField>