unpackaged/main/default/objects/Campaign/fields/External_Source__c.field-meta.xml
<CustomField>
    <fullName>External_Source__c</fullName>
    <label>External Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>