unpackaged/main/default/objects/Campaign/fields/External_Subj__c.field-meta.xml
<CustomField>
    <fullName>External_Subj__c</fullName>
    <description>Subject line from Adobe campaign. Used for campaign tracking in the Lead forms.</description>
    <inlineHelpText>Subject line used in email.</inlineHelpText>
    <label>Subject Line</label>
    <length>100</length>
    <type>Text</type>
</CustomField>