unpackaged/main/default/objects/Campaign/listViews/All_Expired_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Expired_Campaigns</fullName>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.END_DATE</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>All Expired Campaigns</label>
</ListView>